# python_arcade_games

./: README.md
asteroids/: .gitignore  CLAUDE.md  README.md  cross_entropy_analysis.md  cuda_test.py  death_penalty_plan.md  entropy_idea.md  example_ai_input.py  format.sh  game.py  game_input_keyboard.py  game_runner.py  heuristic_ai_input.py  main_arcade.py  main_genetic.py  main_headless.py  main_pg.py  nn_ai_input.py  notes.md  polar_model_improvements.md  pyproject.toml  research_notes.md  what_to_do_next.md
asteroids/.specify/memory/: constitution.md
asteroids/asteroids/: __init__.py
asteroids/asteroids/ai/: __init__.py  heuristic.py  neural.py  polar2_nn.py  polar_nn.py  raw_geometry_nn.py
asteroids/asteroids/core/: __init__.py  game.py  game_runner.py  keyboard.py
asteroids/nn_checkpoints/: polar2_pg_wave5_exploit_best.pth
asteroids/nn_weights/: polar2_pg_ent005_best.pth  polar2_pg_ent005_dp01_best.pth  polar2_pg_wave5_checkpoint_33305.pth  polar2_pg_wave5_checkpoint_36000.pth  polar_pg_best.pth
asteroids/specs/001-training-progress-logging/: plan.md  spec.md  tasks.md
asteroids/specs/002-cross-entropy-training/: plan.md  spec.md
asteroids/specs/003-fix-angle-bearing/: data-model.md  plan.md  (+4 more)
asteroids/tools/: analyze_state_data.py  benchmark.sh  compact_recordings.py  convert_training_data.py  generate_random_model.py  measure_entropy.py  promote_checkpoint.sh  save_checkpoint.sh  visualize_reward_shaping.py  visualize_state.py  visualize_state_polar.py
asteroids/training/: cross_entropy.py  main_genetic.py  main_pg.py  policy_gradient.py
(+58 files in other folders)
